--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <router-link to="/actors">aktorzy</router-link>
         <router-view></router-view>
          
-        <hr/>
+        <!--<hr/>
         <h1>Movies:</h1>
         <movie v-for="movie in movieDatabase" :key="(movie.id + 1)*100000000" :movie="movie" :cast="movieActors(movie.id)" 
             v-on:delete="deleteMovie" v-on:edit="editMovie" :movieEdited="movieEdited">
@@ -128,7 +128,7 @@
         <h1>Aktorzy:</h1>
         <actor v-for="actor in actorsDatabase" :key="(actor.id + 1)*100000000000" :actor="actor" :movies="actorsMovies(actor.id)" 
             v-on:delete="deleteActor" v-on:edit="editActor" >
-        </actor>    
+        </actor>    -->
 
     </div>
     
