--- a/helper.html
+++ b/helper.html
@@ -1,33 +1,12 @@
-<div style="margin:auto">
-    <div style="float:left;width:50%">
-        <div style="width: 50%;float:left">
-            <h1 style="color:blue">
-                Movie name: {{ movie.name }}
-            </h1>
-            
-        </div>
-        <div style="width: 50%;float:left">
-            <img :src="movie.avatar"/>
-        </div>
-        <p>
-            Date: {{ movie.dateOfRelease }}
-        </p>
-        <p>
-            Genere: {{ movie.genere }}
-        </p>
-        <ul>
-            <li v-for="role in cast" v-bind:key="role.actorId">
-            {{ role.actor && role.actor.name }}
-            </li>
-        </ul>
+<div>
+    <div style="display:flex">
+        <formA :title="title" v-on:editactorevent="addActor">
+        </formA>
     </div>
-    <div style="float:left;width:50%">
-        <button>
-            Edytuj
-        </button>
-        <br/>
-        <button>
-            Usuń
-        </button>
+<h1>Aktorzy:</h1>
+    <div>
+        <div v-for="actor in actors">
+            <actor :actor="actor"></actor> 
+        </div>
     </div>
 </div>
