--- a/index.html
+++ b/index.html
@@ -4,133 +4,12 @@
     <link rel = "stylesheet" href="site.css">
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
-    <div name="1" class="grid" id="app">
-        <!--
-        <div style="display:flex">
-            <div style="float:left;width:33%">
-                <h1>Dodaj film :</h1>
-
-                <form v-on:submit.prevent="addMovie">
-                    <label>
-                        Tytuł:
-                    </label><br/>
-                    <input v-model="movieTitle">
-                    <br/>
-                    <label>
-                        Opis:
-                    </label>
-                    <br/>
-                    <textarea v-model="movieDescription"></textarea>
-                    <br/>
-                    <label>
-                        Data:
-                    </label>
-                    <br/>
-                    <input type="date" v-model="movieDateOfRelease">
-                    <br/>
-                    <label>
-                        Gatunek:
-                    </label>
-                    <br/>
-                    <select v-model="movieGenere">
-                        <option>komedia</option>
-                        <option>romans</option>
-                        <option>horror</option>
-                        <option>dramat</option>
-                    </select>   
-                    <br/>
-                    <label>
-                        Url do plakatu:
-                    </label><br/>
-                    <input type="url" v-model="movieAvatar">
-                    <br/>
-                    <input type="submit" value="Wyślij">
-                </form>
-            </div>
-            <div style="float:left;width:33%">
-                <h1>Dodaj aktora:</h1>
-                <form v-on:submit.prevent="addActor">
-                    <label>
-                        Imię aktora:
-                    </label><br/>
-                    <input v-model="actorName">
-                    <br/>
-                    <label>
-                        Opis:
-                    </label>
-                    <br/>
-                    <textarea v-model="actorDescription"></textarea>
-                    <br/>
-                    <label>
-                        Rok urodzenia:
-                    </label>
-                    <br/>
-                    <input type="number" v-model="actorYearOfBirth">
-                    <br/>
-                    <label>
-                        Miejsce urodzenia:
-                    </label><br/>
-                    <input v-model="actorPlaceOfBirth">
-                    <br/>
-                    <label>
-                        Wzrost:
-                    </label>
-                    <br/>
-                    <input type="number" v-model="actorHeightCM">
-                    <br/>
-                    <input type="submit" value="Wyślij">
-                </form>
-            </div>
-            <div style="float:left;width:33%">
-                <h1>Dodaj role:</h1>
-                <form v-on:submit.prevent="addActorToMovie">
-                    <label>
-                        Rola:
-                    </label><br/>
-                    <input v-model="roleName">
-                    <br/>
-                    <label>
-                        Film:
-                    </label>
-                    <select v-model="roleFilm">
-                        <option v-for="movie in movieDatabase" v-bind:value="movie">{{ movie.name }}</option>
-                    </select>   
-                    <br/>
-                    <br/>
-                    <label>
-                        Aktor:
-                    </label>
-                    <select v-model="roleActor">
-                        <option v-for="actor in actorsDatabase" :value="actor">{{ actor.name }}</option>
-                    </select>   
-                    <br/>
-                    
-                    <br/>
-                    <input type="submit" value="Wyślij">
-                </form>
-            </div>
+    <div id="app">
+        <div class="nav">
+            <router-link to="/movies" class="button">filmy</router-link>
+            <router-link to="/actors" class="button">aktorzy</router-link>
         </div>
-         
-        <hr/>
-        <h1>Movies:</h1>
-        <movie v-for="movie in movieDatabase" :key="(movie.id + 1)*100000000" :movie="movie" :cast="movieActors(movie.id)" 
-            v-on:delete="deleteMovie" v-on:edit="editMovie" :movieEdited="movieEdited">
-        </movie>
-        <hr/>
-        <hr/>
-        <h1>Role:</h1>
-        <role v-for="role in movieActorsDatabase" :role="role" 
-            v-on:delete="deleteActorFromTheMovie" v-on:edit="editRoleOfTheActorInTheMovie" >
-        </role>
-
-        <h1>Aktorzy:</h1>
-        <actor v-for="actor in actorsDatabase" :key="(actor.id + 1)*100000000000" :actor="actor" :movies="actorsMovies(actor.id)" 
-            v-on:delete="deleteActor" v-on:edit="editActor" >
-        </actor>    -->
-
-        <div name="2">
-            <router-link to="/movies" class="button" style="position: fixed;">filmy</router-link>
-            <router-link to="/actors" class="button" style="position: fixed; margin-left: 100px;">aktorzy</router-link>
+        <div class="content">
             <router-view></router-view>
         </div>
     </div>
