Obejrzane filmy list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div class="nav">
             <router-link to="/movies" class="button">filmy</router-link>
             <router-link to="/actors" class="button">aktorzy</router-link>
+            <router-link to="/viewed" class="button">obejrzane</router-link>
         </div>
         <div class="content">
             <router-view></router-view>
